feat: add log gen code
